# tradingmarketsimulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  coverage.json  devenv.nix  flake.nix
.forgejo/workflows/: clang-debug.yml  gcc-debug.yml  gcc-release.yml
.gitea/workflows/: ci.yml  gcc-debug.yml  mirror-to-github.yaml
benchmarks/: spscqueue_benchmark.cc
etc/: config.toml
include/mms/app/: Controller.hh  Core.hh
include/mms/error/: CoreException.hh  Error.hh
include/mms/exchange/: OptionOrderBook.hh  OptionOrderGenerator.hh  OrderBook.hh
include/mms/market/: BuyOrder.hh  MarketFeed.hh  Order.hh  Price.hh
include/mms/market_data/: MarketDataGenerator.hh  MarketDepthConsumer.hh  MarketDepthGenerator.hh
include/mms/math/: matrix.hpp
include/mms/options/: PayOff.hh  PayOffCall.hh  PayOffDoubleDigital.hh  PayOffPut.hh  VanillaOption.hh
include/mms/structs/: OptionDepthBook.cc  OptionDepthBook.hh  Structs.hh
include/mms/utils/: Constants.hh  DumbTypes.hh  Timer.hpp  TomlParser.hh  Types.hh
src/fiah/app/: Core.cc
src/mms/app/: Controller.cc  Core.cc
src/mms/client/: main.cc
src/mms/exchange/: OptionOrderGenerator.cc  OrderBook.cc
src/mms/market/: MarketFeed.cc  Order.cc
src/mms/market_data/: MarketDataGenerator.cc  MarketDepthConsumer.cc  MarketDepthGenerator.cc  consumer_main.cc  generator_main.cc
src/mms/options/: CMakeLists.txt  PayOff.cc  PayOffDoubleDigital.cc  VanillaOption.cc  main.cc
src/mms/server/: main.cc
tests/: OptionOrderBook_test.cc  OptionOrderGenerator_test.cc  README.md  core_test.cc  test_utils.hh
